--- a/.github/workflows/send-to-form.yml
+++ b/.github/workflows/send-to-form.yml
@@ -1,13 +1,17 @@
-name: Submit to Google Form
+name: Manual Submit to Google Form
 
 on:
-  repository_dispatch:
-    types: [solar_on, solar_off]
+  workflow_dispatch:
+    inputs:
+      event_type:
+        description: 'Event type to send'
+        required: true
+        default: 'solar_on'
 
 jobs:
   submit-form:
     runs-on: ubuntu-latest
     steps:
-      - name: Submit Google Form
+      - name: Send to Google Form
         run: |
-          curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSc9asPeR_xC3-stBX1OrMKx_rmYBDOL-rhx4mep71EvdktKgg/formResponse?entry.1131282568=solar_on&entry.1829867408=GitHub"
+          curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSc9asPeR_xC3-stBX1OrMKx_rmYBDOL-rhx4mep71EvdktKgg/formResponse?entry.1131282568=${{ github.event.inputs.event_type }}&entry.1829867408=GitHub"
