--- a/.github/workflows/ewelink-control.yml
+++ b/.github/workflows/ewelink-control.yml
@@ -9,20 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ตั้งค่า EVENT_TYPE
-        run: echo "EVENT_TYPE=${{ github.event.action }}" >> $GITHUB_ENV
-
       - name: ตรวจคำสั่งที่ได้รับ
-        run: echo "Event type received: $EVENT_TYPE"
+        run: echo "Event type received: ${{ github.event.action }}"
 
       - name: ส่งข้อมูลไปยัง Google Form ตามคำสั่ง
         run: |
-          if [ "$EVENT_TYPE" = "solar_on" ]; then
+          if [[ "${{ github.event.action }}" == "solar_on" ]]; then
             curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
               -d "entry.1561980421=solar_on" \
-              -d "entry.1715493103=ESP";
-          elif [ "$EVENT_TYPE" = "solar_off" ]; then
+              -d "entry.1715493103=ESP"
+          elif [[ "${{ github.event.action }}" == "solar_off" ]]; then
             curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdGHk7v1b9RX2GeKl0w_BSDcmTtbxtyK0F3595fcpqQagLxEQ/formResponse \
               -d "entry.1686318127=solar_off" \
-              -d "entry.1457056019=ESP";
+              -d "entry.1457056019=ESP"
           fi
+
