--- a/.github/workflows/ewelink-control.yml
+++ b/.github/workflows/ewelink-control.yml
@@ -9,21 +9,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ตรวจคำสั่งที่ได้รับ
+      - name: ตั้งค่า EVENT_TYPE เป็น environment variable
         env:
           EVENT_TYPE: ${{ github.event.action }}
-        run: echo "Event type received: $EVENT_TYPE"
+        run: |
+          echo "Event type received: $EVENT_TYPE"
 
       - name: ส่งข้อมูลไปยัง Google Form ตามคำสั่ง
         env:
           EVENT_TYPE: ${{ github.event.action }}
         run: |
           if [ "$EVENT_TYPE" = "solar_on" ]; then
-            curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
-              -d "entry.1561980421=solar_on" \
-              -d "entry.1715493103=ESP"
-          elif [ "$EVENT_TYPE" = "solar_off" ]; then
-            curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdGHk7v1b9RX2GeKl0w_BSDcmTtbxtyK0F3595fcpqQagLxEQ/formResponse \
-              -d "entry.1686318127=solar_off" \
-              -d "entry.1457056019=ESP"
+            curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdf_K9EN_B9CEMTtxbyQ8K5R8n1z3f3956wFQk9Jm5n2dK3Wg/formResponse \
+              -d "entry.1457809611=on"
           fi
+
+          if [ "$EVENT_TYPE" = "solar_off" ]; then
+            curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdf_K9EN_B9CEMTtxbyQ8K5R8n1z3f3956wFQk9Jm5n2dK3Wg/formResponse \
+              -d "entry.1457809611=off"
+          fi
+
