--- a/.github/workflows/send-to-form-a.yml
+++ b/.github/workflows/send-to-form-a.yml
@@ -1,14 +1,16 @@
-name: send-to-form-a
+name: log-to-google-form
 
 on:
-  workflow_dispatch:
+  repository_dispatch:
+    types: [log_event]
 
 jobs:
-  send:
+  log_event:
     runs-on: ubuntu-latest
     steps:
-      - name: ส่งข้อมูลไปยัง Google Form A
+      - name: ส่งข้อมูลจาก ESP ไปยัง Google Form
         run: |
           curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
-            -d "entry.1561980421=solar_on" \
-            -d "entry.1715493103=ESP"
+            -d "entry.1715493103=${{ github.event.client_payload.event_source }}" \
+            -d "entry.747932621=${{ github.event.client_payload.soc }}" \
+            -d "entry.1561980421=${{ github.event.client_payload.event_type }}"
