--- a/.github/workflows/log-to-line.yml
+++ b/.github/workflows/log-to-line.yml
@@ -1,8 +1,16 @@
 name: log-to-line
 
 on:
-  repository_dispatch:
-    types: [log_event]
+  workflow_dispatch:
+    inputs:
+      soc:
+        description: 'Battery SOC (%)'
+        required: true
+        default: '23'
+      event_type:
+        description: 'Event type (e.g. Low Batt, Normal Batt)'
+        required: true
+        default: 'Low Batt'
 
 jobs:
   notify:
@@ -11,4 +19,12 @@ jobs:
       - name: แจ้งเตือนผ่าน LINE ผ่าน Webhook
         run: |
           curl -X POST https://eo2jv7jv7xq3z7z.m.pipedream.net \
-            -d "soc=${{ github.event.client_payload.soc }}&event=${{ github.event.client_payload.event_type }}"
+            -d "soc=${{ github.event.inputs.soc }}&event=${{ github.event.inputs.event_type }}"
+
+      - name: Log Success
+        if: success()
+        run: echo "✅ แจ้งเตือนสำเร็จ: SOC=${{ github.event.inputs.soc }}%, สถานะ=${{ github.event.inputs.event_type }}"
+
+      - name: Log Failure
+        if: failure()
+        run: echo "❌ แจ้งเตือนไม่สำเร็จ: ตรวจสอบ webhook หรือค่า input"
