--- a/.github/workflows/log-to-line.yml
+++ b/.github/workflows/log-to-line.yml
@@ -15,15 +15,18 @@ on:
 jobs:
   notify:
     runs-on: ubuntu-latest
+    env:
+      SOC: ${{ inputs.soc }}
+      EVENT: ${{ inputs.event_type }}
     steps:
       - name: แจ้งเตือนผ่าน LINE ผ่าน Webhook
         run: |
           curl -X POST https://eo2jv7jv7xq3z7z.m.pipedream.net \
-            -d "soc=${{ inputs.soc }}&event=${{ inputs.event_type }}"
+            -d "soc=$SOC&event=$EVENT"
 
       - name: Log Success
         if: ${{ success() }}
-        run: echo "✅ แจ้งเตือนสำเร็จ: SOC=${{ inputs.soc }}%, สถานะ=${{ inputs.event_type }}"
+        run: echo "✅ แจ้งเตือนสำเร็จ: SOC=$SOC%, สถานะ=$EVENT"
 
       - name: Log Failure
         if: ${{ failure() }}
