--- a/.github/workflows/Send_ON.yml
+++ b/.github/workflows/Send_ON.yml
@@ -1,36 +1,24 @@
-# This is a basic workflow to help you get started with Actions
+name: send-to-on
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  repository_dispatch:
+    types: [log_event]  # ตรงกับ event_type ที่ ESP32 ส่งมา
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  log_event:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Debug step - ดูข้อมูลที่รับมา (สามารถลบออกได้หลังทดสอบ)
+      - name: Debug Received Payload
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "================================"
+          echo "Received SOC: ${{ github.event.client_payload.soc }}"
+          echo "Received Event: ${{ github.event.client_payload.event_type }}"
+          echo "================================"
+
+      # ส่งข้อมูลไป Google Form
+      - name: ส่งข้อมูลจาก ESP ไปยัง Google Form
+        run: |
+          curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
+            -d "entry.29631913=${{ github.event.client_payload.soc }}" \
+            --fail --silent --show-error
