--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -9,7 +9,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      
+        with:
+          persist-credentials: false  # ปิดไว้เพื่อใช้ PAT manual ด้านล่าง
+
       - name: อ่านสถานะปัจจุบัน
         id: read_state
         run: |
@@ -20,8 +22,7 @@ jobs:
           fi
           echo "current_state=$STATE" >> $GITHUB_OUTPUT
           echo "Current state: $STATE"
-      
-      # Sheet 1: ส่ง log_event ทุกครั้ง (ไม่มีเงื่อนไข)
+
       - name: ส่งข้อมูลไป Sheet 1 (log)
         if: github.event.action == 'log_event'
         run: |
@@ -30,8 +31,7 @@ jobs:
             -d "entry.1561980421=${{ github.event.client_payload.status }}" \
             --fail --silent --show-error
           echo "Log sent to Sheet 1"
-      
-      # Sheet 2: ส่ง solar_on เฉพาะเมื่อ state != "on_sent"
+
       - name: ส่งข้อมูลไป Sheet 2 (solar_on)
         if: github.event.action == 'solar_on' && steps.read_state.outputs.current_state != 'on_sent'
         run: |
@@ -40,8 +40,7 @@ jobs:
             --fail --silent --show-error
           echo "on_sent" > solar_state.txt
           echo "Solar ON sent to Sheet 2, state changed to on_sent"
-      
-      # Sheet 3: ส่ง solar_off เฉพาะเมื่อ state != "off_sent"
+
       - name: ส่งข้อมูลไป Sheet 3 (solar_off)
         if: github.event.action == 'solar_off' && steps.read_state.outputs.current_state != 'off_sent'
         run: |
@@ -50,8 +49,7 @@ jobs:
             --fail --silent --show-error
           echo "off_sent" > solar_state.txt
           echo "Solar OFF sent to Sheet 3, state changed to off_sent"
-      
-      # บันทึกสถานะกลับ repository
+
       - name: Commit state changes
         if: github.event.action == 'solar_on' || github.event.action == 'solar_off'
         run: |
@@ -59,4 +57,5 @@ jobs:
           git config user.email "actions@github.com"
           git add solar_state.txt
           git diff --quiet && git diff --staged --quiet || git commit -m "Update solar state: ${{ github.event.action }}"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git push
