--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -1,73 +1,146 @@
-name: 3-way-option
-
+name: SOC Monitor with Mode Switching
 on:
   repository_dispatch:
-    types: [log_event, solar_on, solar_off]
+    types: [log_event]
 
 jobs:
-  handle_event:
+  handle_soc:
     runs-on: ubuntu-latest
     steps:
-      # ✅ Checkout repo โดยไม่ใช้ credentials (เราจะใช้ PAT manual)
+      # ✅ Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      # 📖 อ่านสถานะจากไฟล์ solar_state.txt
+      # 📖 อ่านสถานะปัจจุบันจากไฟล์
       - name: อ่านสถานะปัจจุบัน
         id: read_state
         run: |
           if [ -f solar_state.txt ]; then
-            ON_STATE=$(grep '^on=' solar_state.txt | cut -d '=' -f2)
-            OFF_STATE=$(grep '^off=' solar_state.txt | cut -d '=' -f2)
+            MODE=$(grep '^mode=' solar_state.txt | cut -d '=' -f2)
+            SOLAR_ON_SENT=$(grep '^solar_on_sent=' solar_state.txt | cut -d '=' -f2)
+            SOLAR_OFF_SENT=$(grep '^solar_off_sent=' solar_state.txt | cut -d '=' -f2)
           else
-            ON_STATE="none"
-            OFF_STATE="none"
+            MODE="normal"
+            SOLAR_ON_SENT="false"
+            SOLAR_OFF_SENT="false"
           fi
-          echo "on_state=$ON_STATE" >> $GITHUB_OUTPUT
-          echo "off_state=$OFF_STATE" >> $GITHUB_OUTPUT
-          echo "Current state: on=$ON_STATE, off=$OFF_STATE"
+          
+          echo "mode=$MODE" >> $GITHUB_OUTPUT
+          echo "solar_on_sent=$SOLAR_ON_SENT" >> $GITHUB_OUTPUT
+          echo "solar_off_sent=$SOLAR_OFF_SENT" >> $GITHUB_OUTPUT
+          echo "📊 Current State: mode=$MODE, solar_on_sent=$SOLAR_ON_SENT, solar_off_sent=$SOLAR_OFF_SENT"
 
-      # 📝 ส่ง log_event ทุกครั้ง
-      - name: ส่งข้อมูลไป Sheet 1 (log)
-        if: github.event.action == 'log_event'
+      # 🔄 ตรวจสอบและเปลี่ยน Mode
+      - name: ตรวจสอบและเปลี่ยน Mode
+        id: check_mode
         run: |
-          curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
-            -d "entry.747932621=${{ github.event.client_payload.soc }}" \
-            -d "entry.1561980421=${{ github.event.client_payload.status }}" \
-            --fail --silent --show-error
-          echo "Log sent to Sheet 1"
+          SOC=${{ github.event.client_payload.soc }}
+          CURRENT_MODE=${{ steps.read_state.outputs.mode }}
+          NEW_MODE=$CURRENT_MODE
+          EVENT_TEXT=""
+          SEND_SOLAR_ON="false"
+          SEND_SOLAR_OFF="false"
+          
+          echo "🔍 Processing: SOC=$SOC, Current Mode=$CURRENT_MODE"
+          
+          # ตรวจสอบการเปลี่ยน Mode
+          if [ "$CURRENT_MODE" = "normal" ]; then
+            if [ $SOC -le 25 ]; then
+              NEW_MODE="low_batt"
+              EVENT_TEXT="Low_Batt"
+              SEND_SOLAR_OFF="true"
+              echo "🔴 Mode Change: Normal → Low Batt (SOC=$SOC ≤ 25)"
+            else
+              EVENT_TEXT="Normal_Batt"
+              echo "🟢 Stay in Normal Mode (SOC=$SOC > 25)"
+            fi
+          elif [ "$CURRENT_MODE" = "low_batt" ]; then
+            if [ $SOC -ge 35 ]; then
+              NEW_MODE="normal"
+              EVENT_TEXT="Normal_Batt"
+              SEND_SOLAR_ON="true"
+              echo "🟢 Mode Change: Low Batt → Normal (SOC=$SOC ≥ 35)"
+            else
+              EVENT_TEXT="Low_Batt"
+              echo "🔴 Stay in Low Batt Mode (SOC=$SOC < 35)"
+            fi
+          fi
+          
+          echo "mode=$NEW_MODE" >> $GITHUB_OUTPUT
+          echo "event_text=$EVENT_TEXT" >> $GITHUB_OUTPUT
+          echo "send_solar_on=$SEND_SOLAR_ON" >> $GITHUB_OUTPUT
+          echo "send_solar_off=$SEND_SOLAR_OFF" >> $GITHUB_OUTPUT
+          echo "📋 Decision: mode=$NEW_MODE, event=$EVENT_TEXT, solar_on=$SEND_SOLAR_ON, solar_off=$SEND_SOLAR_OFF"
 
-      # ☀️ ส่ง solar_on ถ้า on_state != sent
-      - name: ส่งข้อมูลไป Sheet 2 (solar_on)
-        if: github.event.action == 'solar_on' && steps.read_state.outputs.on_state != 'sent'
+      # 📝 ส่งข้อมูลไป Sheet 1 (ทุกครั้ง)
+      - name: ส่งข้อมูลไป Sheet 1 (Log)
+        run: |
+          SOC=${{ github.event.client_payload.soc }}
+          EVENT="${{ steps.check_mode.outputs.event_text }}"
+          
+          curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSdrDVFEEkkdZ6k4rdG4OCkTWoek9GBk1Uip-GWWDZR8HCsXkQ/formResponse \
+            -d "entry.747932621=$SOC" \
+            -d "entry.1561980421=$EVENT" \
+            --fail --silent --show-error
+          
+          echo "✅ Sheet 1 Log sent: soc=$SOC, event=$EVENT"
+
+      # ☀️ ส่ง solar_on ไป Sheet 2 (ถ้าต้องส่ง)
+      - name: ส่ง solar_on ไป Sheet 2
+        if: steps.check_mode.outputs.send_solar_on == 'true' && steps.read_state.outputs.solar_on_sent == 'false'
         run: |
           curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSchglVNdUfC_titEV191XeR_uH9NnVYyMMmtuoZmgM0oH3yVg/formResponse \
             -d "entry.29631913=solar_on" \
             --fail --silent --show-error
-          echo "on=sent" > solar_state.txt
-          echo "off=none" >> solar_state.txt
-          echo "Solar ON sent → reset OFF state"
+          
+          echo "✅ Sheet 2: solar_on sent"
 
-      # 🌑 ส่ง solar_off ถ้า off_state != sent
-      - name: ส่งข้อมูลไป Sheet 3 (solar_off)
-        if: github.event.action == 'solar_off' && steps.read_state.outputs.off_state != 'sent'
+      # 🌑 ส่ง solar_off ไป Sheet 3 (ถ้าต้องส่ง)
+      - name: ส่ง solar_off ไป Sheet 3
+        if: steps.check_mode.outputs.send_solar_off == 'true' && steps.read_state.outputs.solar_off_sent == 'false'
         run: |
           curl -X POST https://docs.google.com/forms/d/e/1FAIpQLSfR4GihZk5nhFnJndejNVNji_5Mywbg3PIgZi3m3ZjQxGApQQ/formResponse \
             -d "entry.1012650439=solar_off" \
             --fail --silent --show-error
-          echo "off=sent" > solar_state.txt
-          echo "on=none" >> solar_state.txt
-          echo "Solar OFF sent → reset ON state"
+          
+          echo "✅ Sheet 3: solar_off sent"
 
-      # 💾 Commit และ push กลับเข้า repo โดยใช้ PAT
+      # 💾 บันทึกสถานะใหม่
+      - name: บันทึกสถานะใหม่
+        run: |
+          NEW_MODE=${{ steps.check_mode.outputs.mode }}
+          SEND_SOLAR_ON=${{ steps.check_mode.outputs.send_solar_on }}
+          SEND_SOLAR_OFF=${{ steps.check_mode.outputs.send_solar_off }}
+          
+          # กำหนดค่า sent flags
+          if [ "$SEND_SOLAR_ON" = "true" ]; then
+            SOLAR_ON_SENT="true"
+            SOLAR_OFF_SENT="false"
+          elif [ "$SEND_SOLAR_OFF" = "true" ]; then
+            SOLAR_ON_SENT="false"
+            SOLAR_OFF_SENT="true"
+          else
+            SOLAR_ON_SENT=${{ steps.read_state.outputs.solar_on_sent }}
+            SOLAR_OFF_SENT=${{ steps.read_state.outputs.solar_off_sent }}
+          fi
+          
+          # เขียนไฟล์ state
+          echo "mode=$NEW_MODE" > solar_state.txt
+          echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
+          echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
+          
+          echo "💾 State saved: mode=$NEW_MODE, solar_on_sent=$SOLAR_ON_SENT, solar_off_sent=$SOLAR_OFF_SENT"
+
+      # 📤 Commit และ Push
       - name: Commit state changes
-        if: github.event.action == 'solar_on' || github.event.action == 'solar_off'
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
           git add solar_state.txt
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update solar state: ${{ github.event.action }}"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update state: mode=${{ steps.check_mode.outputs.mode }}, SOC=${{ github.event.client_payload.soc }}"
           git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git push
+          
+          echo "✅ State committed and pushed"
